<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CEM</string>
    <string name="action_new_event">Add New Event</string>
    <string name="action_search_events">Search Events</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_event">Add Event</string>
	<string name="edit_message">Enter a message</string>
	<string name="button_send">Send</string>
	
	<string name="event_name">Event Name</string>
	<string name="event_location">Location</string>
	<string name="event_type">Event Type</string>
	<string name="add_event_type_button">New</string>
	<string name="event_start_date">Start Date</string>
	<string name="event_start_time">Start Time</string>
	
</resources>
