<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddEvent" >
    
    <EditText android:id="@+id/edit_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_name" />
    
    <EditText android:id="@+id/edit_location"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_name"
        android:hint="@string/event_location" />
    
    <Spinner
        android:id="@+id/edit_event_type"
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/add_event_type_button"
        android:layout_below="@id/edit_location"
        android:hint="@string/event_type" />
    
    <Button
        android:id="@+id/add_event_type_button"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_location"
        android:layout_alignParentRight="true"
        android:text="@string/add_event_type_button" />
    
    <Spinner
        android:id="@+id/edit_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_event_type"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/edit_start_time" />

    <Spinner
        android:id="@+id/edit_start_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_event_type"
        android:layout_alignParentRight="true" />
    
    <Spinner
        android:id="@+id/edit_end_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_start_date"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/edit_end_time" />

    <Spinner
        android:id="@+id/edit_end_time"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_start_time"
        android:layout_alignParentRight="true" />

</RelativeLayout>
